# anomaly-detection

./: .gitignore  cli.py  main.py  pyproject.toml
docs/: CUDA.md  INSTALLATION.md  README.md
src/mp4_anomaly/: __init__.py  _version.py  analysis.py  app.py  cli.py  events.py  exporters.py  main.py  models.py  settings.py  video.py
