[project]
name = "detect-anomaly"
dynamic = ["version"]
description = "Detect moving-sum anomalies in time-lapse MP4 files and export annotated review clips."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "opencv-python>=4.10",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tqdm>=4.66",
    "ultralytics>=8.3",
]

[project.scripts]
detect-anomaly = "mp4_anomaly.main:main"


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"
fallback-version = "0.0.0"


[tool.hatch.build.hooks.vcs]
version-file = "src/mp4_anomaly/_version.py"


[tool.hatch.build.targets.wheel]
packages = ["src/mp4_anomaly"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mp4_anomaly",
    "main.py",
    "docs/README.md",
    "docs",
    "pyproject.toml",
]


[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"